amended coding style

--- a/win.html
+++ b/win.html
@@ -351,9 +351,9 @@
         </div>
         <div id="artikel-branch">
           <p
-            ><img src="img/win/button-yes.svg" width="30" height="30" alt=""><i>Branch „master“</i
+            ><img src="img/win/button-yes.svg" width="30" height="30" alt=""><i>Branch <q>master</q></i
           ></p>
-          <p><i>Empfehlung:</i> Die Berechnung sollte auf Basis von „master“ stattfinden: <a href="#">Branch wechseln</a>.</p>
+          <p><i>Empfehlung:</i> Die Berechnung sollte auf Basis von <q>master</q> stattfinden: <a href="#">Branch wechseln</a>.</p>
         </div>
         <div id="artikel-calculating" class="invisible"
           ><img src="img/win/loading.svg" width="30" height="30" alt=""
