--- a/html/help.html
+++ b/html/help.html
@@ -421,6 +421,8 @@ nothing added to commit but untracked files present (use "git add" to track)</pr
 
         <li>mit dem Icon <img src="../img/win/to-folder.svg" width="30" height="30" alt=""> können Sie eine Kopie der Datei in den <a href="#git-ignore">Ordner <code>ignore</code></a> legen;</li>
 
+        <li>mit dem Icon <img src="../img/win/edit-copy.svg" width="30" height="30" alt=""> können Sie den XML-Quelltext der Datei in die Zwischenablage kopieren;</li>
+
         <li>mit dem Icon <img src="../img/win/preview.svg" width="30" height="30" alt=""> können Sie sich das Kurz-Gefasst der Datei anzeigen lassen, und zwar in der Form, in der es in den Suchergebnissen von <a href="https://www.zdl.org/">zdl.org</a> erscheint;</li>
 
         <li>mit dem Icon <img src="../img/win/open-file.svg" width="30" height="30" alt=""> können Sie die Datei im Standard-XML-Editor Ihres Betriebssystems öffnen.</li>
