[[feature]] Hilfe: Anzahl der Suchtreffer in den Suchergebnissen anzeigen

--- a/html/help.html
+++ b/html/help.html
@@ -1423,6 +1423,7 @@ $ git push</pre>
       ><a href="#" id="search-up" class="icon"><img src="../img/win/search-up.svg" width="30" height="30" alt=""></a
       ><a href="#" id="search-down" class="icon"><img src="../img/win/search-down.svg" width="30" height="30" alt=""></a
       ><input type="checkbox" id="search-global"><label for="search-global">in allen Kapiteln suchen</label
+      ><span id="search-results"></span
       ><a href="#" id="search-close" class="icon"><img src="../img/win/close.svg" width="30" height="30" alt=""></a
     ></div>
   </body>
